// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LikesContainer should pass props to children 1`] = `
<LikesContainer
  likes={
    Object {
      "loading": true,
    }
  }
  recentLikes={
    Object {
      "loading": false,
    }
  }
>
  <div
    className="soft-half-sides@palm soft-double@palm-wide soft-sides soft-top soft-half-bottom background--light-secondary"
    style={
      Object {
        "marginTop": "-20px",
      }
    }
  >
    <RenderLikes
      likes={
        Object {
          "loading": true,
        }
      }
      recentLikes={
        Object {
          "loading": false,
        }
      }
    >
      <div
        className="text-center"
      >
        <Loading />
      </div>
    </RenderLikes>
  </div>
</LikesContainer>
`;

exports[`LikesContainer should render children 1`] = `
<LikesContainer>
  <div
    className="soft-half-sides@palm soft-double@palm-wide soft-sides soft-top soft-half-bottom background--light-secondary"
    style={
      Object {
        "marginTop": "-20px",
      }
    }
  >
    <RenderLikes>
      <div
        className="text-center"
      >
        <Loading />
      </div>
    </RenderLikes>
  </div>
</LikesContainer>
`;

exports[`RenderLikes should render likes only when provided 1`] = `
<RenderLikes
  likes={
    Object {
      "loading": false,
      "userFeed": Array [
        "hello",
        "world",
      ],
    }
  }
  recentLikes={
    Object {
      "loading": false,
      "recentlyLiked": Array [
        "much recent",
        "so like",
        "very wow",
      ],
    }
  }
>
  <Component
    likes={
      Array [
        "hello",
        "world",
      ]
    }
  >
    <div>
      {"likes":["hello","world"]}
    </div>
  </Component>
</RenderLikes>
`;

exports[`RenderLikes should render loading with no props 1`] = `
<RenderLikes>
  <div
    className="text-center"
  >
    <Loading />
  </div>
</RenderLikes>
`;

exports[`RenderLikes should render recentLikes only when likes not provided 1`] = `
<RenderLikes
  likes={
    Object {
      "loading": false,
    }
  }
  recentLikes={
    Object {
      "loading": false,
      "recentlyLiked": Array [
        "much recent",
        "so like",
        "very wow",
      ],
    }
  }
>
  <div>
    <p
      className="soft text-center"
    >
      <em>
        <small>
          Check out some of the latest things from NewSpring
        </small>
      </em>
    </p>
    <Component
      likes={
        Array [
          "much recent",
          "so like",
          "very wow",
        ]
      }
    >
      <div>
        {"likes":["much recent","so like","very wow"]}
      </div>
    </Component>
  </div>
</RenderLikes>
`;
